# obLevelMgr

./: .gitignore  README.md  create_obdb.sql  insert_obdb.sql  pyproject.toml  setup.cfg
src/: OblivionLeveling  OblivionLeveling.py  create_obdb.sql  datadialogs.py  insert_obdb.sql  oblevel.ini
src/obleveltracker/: __init__.py  create_obdb.sql  datadialogs.py  insert_obdb.sql  leveltracker.py  oblevel.ini
test/: test_dialogs.py
