[project]
name = "obLevelMgr"
version = "0.0.1"
authors = [
  { name="Richard Rodenbusch" }
]
description = "A small utility to help manage Elder Scrolls Oblivion Leveling"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "tkinter",
  "logging",
  "pandas",
  "pandastable",
  "pyautogui",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rrodenbusch/obLevelMgr"
Issues = "https://github.com/rrodenbusch/obLevelMgr/issues"
