[metadata]
name = obleveltracker
version = attr: obleveltracker.__version__
author = Richard Rodenbusch
#author_email = rrodenbusch@gmail.com
#url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Elder Scrolls Oblivion Level Tracker
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Bethesda, Elder Scrolls, Oblivion, Leveling
license = AGPL-3.0
classifiers =
	License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
  
[options]
packages = find:
python_requires = >=3.10
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    pyautogui
    pandas
    pandastable
    tk

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    obLevelTracker = obleveltracker.leveltracker:main
    
[options.package_data]
obleveltracker = *.sql, *.ini
* = README.md
